# mlx90640

./: .gitignore  README.md  config.json  examples.py  main.py  pyproject.toml
mlx90640/: __init__.py  alert.py  driver.py  frame.py  utils.py
